--- a/portfolio-front/src/index.css
+++ b/portfolio-front/src/index.css
@@ -15,7 +15,16 @@ code {
     font-weight: bold;
 }
 
+
+.big-header{
+    orientation: portrait;
+}
+.seg-2{
+    background-color: black;
+    z-index: 1;
+}
 .blue-header {
+
     background-color: #38006b;
     width: 100%;
     height: 70px;
@@ -25,10 +34,21 @@ code {
     padding-top: 2rem;
     font-family: "RobotoThin";
     display: flex;
+    z-index: 3;
 }
 
 .detailed-info {
     font-size: 0.8rem;
     padding-top: 0.2rem;
     color: rgb(184, 207, 228);
+}
+
+.profile-pic {
+    background-color: rgb(214, 214, 203);
+    margin-left: 45rem;
+    margin-top: 0rem;
+    position: absolute;
+    height: 12rem;
+    width: 12rem;
+    border-radius: 7rem;
 }
